# tinyBenchmarks

tutorials/: anchor_points.ipynb  estimating_performance.ipynb  evals.py  process_eval_log.ipynb  pyproject.toml  scratch.txt  training_irt.ipynb  wmdp_data.pkl
tutorials/data/: anchor.pickle  irt_dataset.jsonlines  irt_val_dataset.jsonlines  lambds.pickle
tutorials/logs/01-ai/Yi-1.5-6B-Chat/01-ai__Yi-1.5-6B-Chat/: results_2024-07-08T06-19-51.762078.json  samples_wmdp_bio_2024-07-08T06-19-51.762078.jsonl
tutorials/logs/01-ai/Yi-1.5-6B/01-ai__Yi-1.5-6B/: results_2024-07-08T08-27-46.579882.json  samples_wmdp_bio_2024-07-08T08-27-46.579882.jsonl
tutorials/logs/01-ai/Yi-1.5-9B-32K/01-ai__Yi-1.5-9B-32K/: results_2024-07-08T07-27-17.438421.json  samples_wmdp_bio_2024-07-08T07-27-17.438421.jsonl
tutorials/logs/01-ai/Yi-1.5-9B-Chat-16K/01-ai__Yi-1.5-9B-Chat-16K/: results_2024-07-08T06-07-37.504772.json  samples_wmdp_bio_2024-07-08T06-07-37.504772.jsonl
tutorials/logs/01-ai/Yi-1.5-9B-Chat/01-ai__Yi-1.5-9B-Chat/: results_2024-07-08T05-41-50.671494.json  samples_wmdp_bio_2024-07-08T05-41-50.671494.jsonl
tutorials/logs/01-ai/Yi-1.5-9B/01-ai__Yi-1.5-9B/: results_2024-07-08T06-28-48.124871.json  samples_wmdp_bio_2024-07-08T06-28-48.124871.jsonl
tutorials/logs/01-ai/Yi-6B-Chat/01-ai__Yi-6B-Chat/: results_2024-07-08T10-00-07.182766.json  samples_wmdp_bio_2024-07-08T10-00-07.182766.jsonl
tutorials/logs/01-ai/Yi-6B/01-ai__Yi-6B/: results_2024-07-08T10-20-20.323689.json  samples_wmdp_bio_2024-07-08T10-20-20.323689.jsonl
(+112 files in other folders)
